feat(index.html, style.css): create Job Categories page with responsive design for PC Full screen and half screen.

--- a/ex-1/index.html
+++ b/ex-1/index.html
@@ -1,16 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Responsive Web Design - Ex 2</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
-  <title>Responsive Web Design - Ex 2</title>
-</head>
+  <body>
+    <!-- Start coding here -->
+    <div class="container">
+      <h1 class="header">
+        <span class="header-row1">Browse by&nbsp;<br /></span>
+        <span class="header-row2"
+          ><span class="half-highlight">Job</span>&nbsp;Categories</span
+        >
+      </h1>
+      <div class="categories">
+        <div class="categories-row-1">
+          <div class="card">
+            <img src="./pictures/001-digitalmarketing.png" alt="" />
+            <h2>Digital Marketing</h2>
+            <div class="card-bottom">
+              <p>143 Jobs Opened</p>
+              <p>🡢</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./pictures/002-art-and-design.png" alt="" />
+            <h2>Art & Design</h2>
+            <div class="card-bottom">
+              <p>110 Jobs Opened</p>
+              <p>🡢</p>
+            </div>
+          </div>
+          <div class="card bg-lightgray">
+            <img src="./pictures/003-accounting.png" alt="" />
+            <h2>Accounting</h2>
+            <div class="card-bottom">
+              <p>158 Jobs Opened</p>
+              <p>🡢</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./pictures/004-photography.png" alt="" />
+            <h2>Photography</h2>
+            <div class="card-bottom">
+              <p>95 Jobs Opened</p>
+              <p>🡢</p>
+            </div>
+          </div>
+        </div>
 
-<body>
-  <!-- Start coding here -->
-</body>
-
+        <div class="categories-row-2">
+          <div class="card">
+            <img src="./pictures/005-copywriting.png" alt="" />
+            <h2>Copy Writing</h2>
+            <div class="card-bottom">
+              <p>113 Jobs Opened</p>
+              <p>🡢</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./pictures/006-music.png" alt="" />
+            <h2>Music</h2>
+            <div class="card-bottom">
+              <p>55 Jobs Opened</p>
+              <p>🡢</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./pictures/007-hr.png" alt="" />
+            <h2>Human Resources</h2>
+            <div class="card-bottom">
+              <p>25 Jobs Opened</p>
+              <p>🡢</p>
+            </div>
+          </div>        
+            <div class="card bg-orange">
+              <div class="card-center">Explore <br />30 More <br />Categories</p>
+            <p>🡢</p></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
