feat(index.html): add alt value.

--- a/ex-1/index.html
+++ b/ex-1/index.html
@@ -23,7 +23,7 @@
       <div class="categories">
         <div class="categories-row-1">
           <div class="card">
-            <img src="./pictures/001-digitalmarketing.png" alt="" />
+            <img src="./pictures/001-digitalmarketing.png" alt="digital marketing icon" />
             <h2>Digital Marketing</h2>
             <div class="card-bottom">
               <p>143 Jobs Opened</p>
@@ -31,7 +31,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="./pictures/002-art-and-design.png" alt="" />
+            <img src="./pictures/002-art-and-design.png" alt="art and design icon" />
             <h2>Art & Design</h2>
             <div class="card-bottom">
               <p>110 Jobs Opened</p>
@@ -39,7 +39,7 @@
             </div>
           </div>
           <div class="card bg-lightgray">
-            <img src="./pictures/003-accounting.png" alt="" />
+            <img src="./pictures/003-accounting.png" alt="accounting icon" />
             <h2>Accounting</h2>
             <div class="card-bottom">
               <p>158 Jobs Opened</p>
@@ -47,7 +47,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="./pictures/004-photography.png" alt="" />
+            <img src="./pictures/004-photography.png" alt="camera icon" />
             <h2>Photography</h2>
             <div class="card-bottom">
               <p>95 Jobs Opened</p>
@@ -58,7 +58,7 @@
 
         <div class="categories-row-2">
           <div class="card">
-            <img src="./pictures/005-copywriting.png" alt="" />
+            <img src="./pictures/005-copywriting.png" alt="copywriting icon" />
             <h2>Copy Writing</h2>
             <div class="card-bottom">
               <p>113 Jobs Opened</p>
@@ -66,7 +66,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="./pictures/006-music.png" alt="" />
+            <img src="./pictures/006-music.png" alt="headphone icon" />
             <h2>Music</h2>
             <div class="card-bottom">
               <p>55 Jobs Opened</p>
@@ -74,7 +74,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="./pictures/007-hr.png" alt="" />
+            <img src="./pictures/007-hr.png" alt="human resource icon" />
             <h2>Human Resources</h2>
             <div class="card-bottom">
               <p>25 Jobs Opened</p>
