fix: change <p>-></p> to <button>-></button>.

--- a/ex-1/index.html
+++ b/ex-1/index.html
@@ -27,7 +27,7 @@
             <h2>Digital Marketing</h2>
             <div class="card-bottom">
               <p>143 Jobs Opened</p>
-              <p>🡢</p>
+              <button>🡢</button>
             </div>
           </div>
           <div class="card">
@@ -35,7 +35,7 @@
             <h2>Art & Design</h2>
             <div class="card-bottom">
               <p>110 Jobs Opened</p>
-              <p>🡢</p>
+              <button>🡢</button>
             </div>
           </div>
           <div class="card bg-lightgray">
@@ -43,7 +43,7 @@
             <h2>Accounting</h2>
             <div class="card-bottom">
               <p>158 Jobs Opened</p>
-              <p>🡢</p>
+              <button>🡢</button>
             </div>
           </div>
           <div class="card">
@@ -51,7 +51,7 @@
             <h2>Photography</h2>
             <div class="card-bottom">
               <p>95 Jobs Opened</p>
-              <p>🡢</p>
+              <button>🡢</button>
             </div>
           </div>
         </div>
@@ -62,7 +62,7 @@
             <h2>Copy Writing</h2>
             <div class="card-bottom">
               <p>113 Jobs Opened</p>
-              <p>🡢</p>
+              <button>🡢</button>
             </div>
           </div>
           <div class="card">
@@ -70,7 +70,7 @@
             <h2>Music</h2>
             <div class="card-bottom">
               <p>55 Jobs Opened</p>
-              <p>🡢</p>
+              <button>🡢</button>
             </div>
           </div>
           <div class="card">
@@ -78,12 +78,12 @@
             <h2>Human Resources</h2>
             <div class="card-bottom">
               <p>25 Jobs Opened</p>
-              <p>🡢</p>
+              <button>🡢</button>
             </div>
           </div>        
             <div class="card bg-orange">
               <div class="card-center">Explore <br />30 More <br />Categories</p>
-            <p>🡢</p></div>
+            <button>🡢</button></div>
           </div>
         </div>
       </div>
