feat: CSS Responsive Web Design Assignment

--- a/ex-1/index.html
+++ b/ex-1/index.html
@@ -1,16 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Responsive Web Design - Ex 2</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
-  <title>Responsive Web Design - Ex 2</title>
-</head>
-
-<body>
-  <!-- Start coding here -->
-</body>
-
+  <body>
+    <h1 class="header">
+      <span class="header1">Browse by<br /></span>
+      <span class="header2">
+        <span class="hightlight">Job</span>&nbsp;Categories
+      </span>
+    </h1>
+    <div class="content-section1">
+      <div class="item-1">
+        <div class="item-1-1">
+          <img src="./picture/pic-digital marketing.jpg" alt="" />
+        </div>
+        <p class="digital-marketing">Digital Marketing</p>
+        <p class="jobs-opened-digital">143 Jobs Opened</p>
+        <div class="item-1-2">
+          <img src="./picture/Button.jpg" alt="" />
+        </div>
+      </div>
+      <div class="item-2">
+        <div class="item-2-1">
+          <img
+            src="./picture/pic-art & design.png"
+            alt=""
+            width="80px"
+            height="80px"
+          />
+        </div>
+        <p class="art-and-design">Art & Design</p>
+        <p class="jobs-opened-art">110 Jobs Opened</p>
+        <div class="item-2-2">
+          <img src="./picture/Button.jpg" alt="" />
+        </div>
+      </div>
+      <div class="item-3">
+        <div class="item-3-1">
+          <img
+            src="./picture/pic-accounting.png"
+            alt=""
+            width="80px"
+            height="80px"
+          />
+        </div>
+        <p class="accouting">Accounting</p>
+        <p class="jobs-opened-accouting">158 Jobs Opened</p>
+        <div class="item-2-2">
+          <img src="./picture/Button.jpg" alt="" />
+        </div>
+      </div>
+      <div class="item-4">
+        <div class="item-4-1">
+          <img
+            src="./picture/pic-photography.jpg"
+            alt=""
+            width="80px"
+            height="80px"
+          />
+        </div>
+        <p class="photography">Photography</p>
+        <p class="jobs-opened-photography">95 Jobs Opened</p>
+        <div class="item-4-2">
+          <img src="./picture/Button.jpg" alt="" />
+        </div>
+      </div>
+    </div>
+    <div class="content-section2">
+      <div class="item-5">
+        <div class="item-5-1">
+          <img
+            src="./picture/pic-copywriting.jpg"
+            alt=""
+            width="80px"
+            height="80px"
+          />
+        </div>
+        <p class="copywriting">Copy Writing</p>
+        <p class="jobs-opened-copywriting">113 Jobs Opened</p>
+        <div class="item-5-2">
+          <img src="./picture/Button.jpg" alt="" />
+        </div>
+      </div>
+      <div class="item-6">
+        <div class="item-6-1">
+          <img
+            src="./picture/pic-music.jpg"
+            alt=""
+            width="80px"
+            height="80px"
+          />
+        </div>
+        <p class="music">Music</p>
+        <p class="jobs-opened-music">55 Jobs Opened</p>
+        <div class="item-6-2">
+          <img src="./picture/Button.jpg" alt="" />
+        </div>
+      </div>
+      <div class="item-7">
+        <div class="item-7-1">
+          <img
+            src="./picture/pic-humanresouces.jpg"
+            alt=""
+            width="80px"
+            height="80px"
+          />
+        </div>
+        <p class="human-resouces">Human Resouces</p>
+        <p class="jobs-opened-human-resouces">25 Jobs Opened</p>
+        <div class="item-7-2">
+          <img src="./picture/Button.jpg" alt="" />
+        </div>
+      </div>
+      <div class="item-8">
+        <img src="./picture/pic-explore.png" alt="" />
+        <p class="explore">
+          Explore <br />
+          30 More <br />
+          Categories
+        </p>
+        <div class="icon">
+          <img src="./picture/icon.png" alt="" />
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
