feat: Change some text

--- a/ex-1/index.html
+++ b/ex-1/index.html
@@ -13,14 +13,11 @@
     />
     <title>Responsive Web Design - Ex 2</title>
   </head>
-
+  <div class="header">
+    <span>Browse by</span> <br />
+    <span><span class="style-job">Job</span>&nbspCategories</span>
+  </div>
   <body>
-    <h1 class="header">
-      <span class="header1">Browse by<br /></span>
-      <span class="header2">
-        <span class="hightlight">Job</span>&nbsp;Categories
-      </span>
-    </h1>
     <div class="content-section1">
       <div class="item-1">
         <div class="item-1-1">
